--- a/templates/altervar.html
+++ b/templates/altervar.html
@@ -2,12 +2,16 @@
 
 {% block content %}
 
-    <h1><a href="/">Enter Required Credit Score for Approval</a> </h1> 
+    <h1><a href="/">Enter Required Credit Score and Monthy Income for Approval</a> <a href="/test"></a></h1> 
 
         <form method='post' action="/results">
             <label>
                 Credit Score:
                 <input type="number" name="score" />
+            </label>
+            <label>
+                Monthly Income:
+                <input type="number" name="monthly_income" />
             </label>
             
 
